# verifai

./: .env.example  .gitignore  MODEL_INTEGRATION_BRIEF.md  README.md  generate_icons.py  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo
backend/: .env.example  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  dependencies.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: analysis.py  auth.py  emails.py  health.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  auth.py  email.py
backend/app/services/: __init__.py  analysis_service.py  mailbox_service.py  session_store.py
backend/routes/: __init__.py  analyze.py  url_check.py
backend/services/: __init__.py  image_analysis.py  text_analysis.py  url_analysis.py
extension/: background.js  content.js  manifest.json
extension/popup/: popup.html  popup.js
extension/report/: report.html  report.js
frontend/: README.md  index.html  tailwind.config.ts  vite.config.ts
frontend/src/: vite-env.d.ts
frontend/src/components/: ExtensionPopup.tsx  Header.tsx  LoadingState.tsx  ResultCard.tsx  SelectionBubble.tsx  UploadCard.tsx  VerdictBadge.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx  (+1 more)
src/: App.tsx  index.css  tailwind.config.lov.json  vite-env.d.ts
src/components/: BrandLogo.tsx  EmailBodyPreview.tsx  Footer.tsx  LoadingState.tsx  ResultCard.tsx  ScoreBar.tsx  SignalChip.tsx  ThemeToggle.tsx  UploadCard.tsx  UrlRiskBanner.tsx  VerdictBadge.tsx
src/lib/: verifai-api.ts
src/pages/: Dashboard.tsx
(+1 files in other folders)
